--- a/.env.exam
+++ b/.env.exam
@@ -5,18 +5,12 @@ APP_DEBUG=true
 APP_URL=http://localhost:3000
 APP_PORT=3000
 
-DB_HOST=175.178.27.35
-DB_USERNAME=root
-DB_PORT=3306
-DB_PASSWORD=jw@365039
-DB_DATABASE=edu_center
-
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=175.1781.27.35
 DB_PORT=3306
-DB_DATABASE=gohub
+DB_DATABASE=edu_center
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=jw@1365039
 DB_DEBUG=2
 
 REDIS_HOST=127.0.0.1
